# SwiftPotionNG

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: Events.h  FormLoader.h  Hooks.h  Main.cpp  PCH.h  Papyrus.cpp  Papyrus.h  Serialization.h  Settings.h  SwiftPotion.cpp  SwiftPotion.h  Utility.h
